// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditsSettings component handles a read error 1`] = `
<div>
  <h2>
    Credits
  </h2>
  <Blueprint3.Callout>
    Electron Fiddle is, just like Electron, a free open source project welcoming contributors of all genders, cultures, and backgrounds. We would like to thank those who helped to make Electron Fiddle:
  </Blueprint3.Callout>
  <br />
  <div
    className="contributors"
  />
</div>
`;

exports[`CreditsSettings component renders 1`] = `
<div>
  <h2>
    Credits
  </h2>
  <Blueprint3.Callout>
    Electron Fiddle is, just like Electron, a free open source project welcoming contributors of all genders, cultures, and backgrounds. We would like to thank those who helped to make Electron Fiddle:
  </Blueprint3.Callout>
  <br />
  <div
    className="contributors"
  >
    <Blueprint3.Card
      className="contributor"
      elevation={0}
      interactive={true}
      key="felixrieseberg"
      onClick={[Function]}
    >
      <div
        className="avatar"
        style={
          Object {
            "backgroundImage": "url(https://avatars3.githubusercontent.com/u/1426799?v=4)",
          }
        }
      />
      <div
        className="details"
      >
        <h5
          className="name"
        >
          Felix Rieseberg
        </h5>
        <p
          className="location"
        >
          📍 
          San Francisco
        </p>
        <small
          className="bio"
        >
          🙇 ✨🌳 
        </small>
      </div>
    </Blueprint3.Card>
  </div>
</div>
`;

exports[`CreditsSettings component renders for contributors with less data 1`] = `
<div>
  <h2>
    Credits
  </h2>
  <Blueprint3.Callout>
    Electron Fiddle is, just like Electron, a free open source project welcoming contributors of all genders, cultures, and backgrounds. We would like to thank those who helped to make Electron Fiddle:
  </Blueprint3.Callout>
  <br />
  <div
    className="contributors"
  >
    <Blueprint3.Card
      className="contributor"
      elevation={0}
      interactive={true}
      key="felixrieseberg"
      onClick={[Function]}
    >
      <div
        className="avatar"
        style={
          Object {
            "backgroundImage": "url(https://avatars3.githubusercontent.com/u/1426799?v=4)",
          }
        }
      />
      <div
        className="details"
      >
        <h5
          className="name"
        >
          felixrieseberg
        </h5>
      </div>
    </Blueprint3.Card>
  </div>
</div>
`;

exports[`CreditsSettings component renders nothing if we do not have contributors 1`] = `
<div>
  <h2>
    Credits
  </h2>
  <Blueprint3.Callout>
    Electron Fiddle is, just like Electron, a free open source project welcoming contributors of all genders, cultures, and backgrounds. We would like to thank those who helped to make Electron Fiddle:
  </Blueprint3.Callout>
  <br />
  <div
    className="contributors"
  />
</div>
`;
